<resources>
    <string name="app_name">javacalenderproject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- Strings used for overall UI -->
    <string name="get_help">Få hjælp</string>
    <string name="edit_family_and_tasks">Rediger familie og opgaver</string>
    <string name="logo">Logo</string>
    <string name="tasks">Opgaver</string>
    <string name="drag_and_drop">Drag and drop</string>
    <string name="edit">Edit</string>
    <string name="get_help_img">Get Help</string>
    <string name="torsdag">Torsdag</string>
    <string name="fredag">Fredag</string>
    <string name="l_rdag">Lørdag</string>
    <string name="s_ndag">Søndag</string>
    <string name="onsdag">Onsdag</string>
    <string name="tirsdag">Tirsdag</string>
    <string name="mandag">Mandag</string>
    <string name="opgaver">Opgaver</string>
    <string name="tilf_j_opgave">Tilføj opgave</string>
    <string name="tilf_j">Tilføj</string>
    <string name="tid">Tid</string>
    <string name="opdater">Opdater strømpriser</string>

    <!-- Strings used for the get help popup -->
    <string name="welcome_message">Velkommen til EcoHour! Læs mere om appens funktionalitet her</string>
    <string name="weekly_overview">Ugeoversigt: Skift mellem hvilken uge, der vises med frem- og tilbage-knapperne. Se de estimerede elpriser for hver time syv dage frem, angivet med henholdsvis grøn, gul, orange eller rød for at afspejle den relative elpris. De stærke farver angiver de reelle elpriser, hvorimod de svage farver angiver en forudsigelse af elpriserne.</string>
    <string name="tasks_info">Opgaver: Her kan du oprette nye opgaver samt trække og slippe eksisterende opgaver ind i kalenderen for at planlægge dem på specifikke dage og tidspunkter. Fjern eksisterende opgaver i tilstanden \"Rediger familie og opgaver\".</string>
    <string name="family_members">Familiemedlemmer: Her kan du trække og slippe familiemedlemmer til opgaver for at tildele dem. Tilføj og fjern medlemmer i tilstanden \"Rediger familie og opgaver\".</string>
</resources>