<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_message"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tasks_info"
        android:layout_width="624dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tasks_info"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/family_members" />

    <TextView
        android:id="@+id/family_members"
        android:layout_width="627dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/family_members"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weekly_overview" />

    <TextView
        android:id="@+id/weekly_overview"
        android:layout_width="821dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/weekly_overview"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />


</androidx.constraintlayout.widget.ConstraintLayout>